[gd_scene load_steps=7 format=3 uid="uid://di0j701a2wv7l"]

[ext_resource type="Script" path="res://scripts/attacks/possessed_knife.gd" id="1_ggbno"]
[ext_resource type="Texture2D" uid="uid://ceyjpsky5qyil" path="res://assets/edits/possesed_knife.png" id="1_ppsuv"]
[ext_resource type="Texture2D" uid="uid://c3yta62dkekra" path="res://textures/light.tres" id="3_khguu"]
[ext_resource type="AudioStream" uid="uid://bhgsg6pv5wj7p" path="res://assets/audio/attacks/knifeidle.wav" id="4_tcthj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etmek"]
size = Vector2(20, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_pm7vd"]

[node name="possessed_knife" type="Area2D"]
collision_layer = 16
collision_mask = 4
script = ExtResource("1_ggbno")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_etmek")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.33279, 0.34778)
texture = ExtResource("1_ppsuv")

[node name="tracking" type="Area2D" parent="."]
visible = false
scale = Vector2(0.33279, 0.34778)
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="tracking"]
scale = Vector2(-23.0155, 22.4811)
shape = SubResource("CircleShape2D_pm7vd")

[node name="TrackingPing" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 100
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2(0, 25)
angular_velocity_max = 180.0
color = Color(0.901961, 0.133333, 0.133333, 1)

[node name="iframes" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="idle_despawn" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.901961, 0.133333, 0.133333, 1)
energy = 0.5
texture = ExtResource("3_khguu")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tcthj")
autoplay = true
max_distance = 200.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="tracking" to="." method="_on_tracking_body_entered"]
[connection signal="timeout" from="TrackingPing" to="." method="_on_tracking_ping_timeout"]
[connection signal="timeout" from="iframes" to="." method="_on_iframes_timeout"]
[connection signal="timeout" from="idle_despawn" to="." method="_on_idle_despawn_timeout"]
